web_studio/static/src/scss/list_editor.scss
.o_web_studio_list_view_editor .o_list_view .table {
    // Define transparent borders to prevent flickering on hover
    border-collapse: separate;
    th, td {
        border-left: 1px solid transparent;
        border-right: 1px solid transparent;
        &.o_web_studio_hook {
            border-left: 2px solid transparent;
        }
    }

    // Default columns
    th.o_web_studio_hovered {
        color: black;
        border-left: 1px dashed $o-brand-primary;
        border-right: 1px dashed $o-brand-primary;
    }
    td.o_web_studio_hovered:not(.o_web_studio_hook) {
        border-left: 1px dashed $o-brand-primary;
        border-right: 1px dashed $o-brand-primary;
    }

    th.o_web_studio_clicked {
        background-color: white;
        border-left: 1px solid black;
        border-right: 1px solid black;
    }
    td.o_web_studio_clicked {
        border-left: 1px solid black;
        border-right: 1px solid black;
    }

    // New columns
    th.o_web_studio_hook {
        > i {
            visibility: hidden;
            color: $o-brand-primary;
        }
    }

    .o_web_studio_hook {
        &.o_web_studio_nearest_hook {
            cursor: pointer !important;
            border-left: 2px solid $o-brand-primary;
            > i {
                visibility: visible;
            }
        }
    }
}

